<resources>
    <!--    앱 이름-->
    <string name="app_name">Hanple</string>


    <!--others--><!--others--><!--others--><!--others--><!--others--><!--others--><!--others--><!--others--><!--others--><!--others--><!--others-->
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="nickname">별명</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="next">다음</string>
    <string name="skip">건너뛰기</string>
    <string name="_10">10</string>
    <string name="_00">00</string>
    <string name="persent">퍼센트</string>
    <string name="colon">:</string>
    <string name="close">닫기</string>
    <string name="confirm">확인</string>


    <!--category-->
    <string name="place_name">장소 이름</string>
    <string name="place_detail">장소 정보</string>
    <string name="place_address">장소 주소</string>
    <string name="place_open_hour">장소 운영 시간</string>
    <string name="points">점</string>
    <string name="around">주변</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="category_food">음식점 ∨</string>
    <string name="category_name">카테고리 이름</string>


    <!--navigation_drawer--><!--navigation_drawer--><!--navigation_drawer--><!--navigation_drawer--><!--navigation_drawer-->
    <string name="info">내 정보</string>
    <string name="search_history">검색 기록</string>
    <string name="notification">공지사항</string>
    <string name="version">앱 버전</string>


    <!--recyclerview--><!--recyclerview--><!--recyclerview--><!--recyclerview--><!--recyclerview--><!--recyclerview--><!--recyclerview-->
    <string name="address">address</string>
    <string name="score">score</string>
    <string name="_4_0">4.0</string>


    <!--    loading--><!--    loading--><!--    loading--><!--    loading--><!--    loading--><!--    loading--><!--    loading--><!--    loading-->
    <string name="loading_address">위치 정보를 불러오고 있어요!</string>


    <!--backpress--><!--backpress--><!--backpress--><!--backpress--><!--backpress--><!--backpress--><!--backpress--><!--backpress-->
    <string name="backpress_first">한번 더 누르면 종료됩니다.</string>
    <string name="backpress_second">앱을 종료하시겠습니까?</string>
    <string name="backpress_end">종료</string>
    <string name="backpress_return_home">처음 화면으로 돌아가시겠습니까?</string>


    <!--    onboarding--><!--    onboarding--><!--    onboarding--><!--    onboarding--><!--    onboarding--><!--    onboarding-->
    <string name="onboarding_email_log_in_btn">이메일로 로그인</string>
    <string name="onboarding_guest_log_in_btn">게스트로 이용하기</string>
    <string name="onboarding_sign_up">회원가입</string>
    <string name="onboarding_welcome">Hanple로 나들이 추천 받기</string>
    <string name="onboarding_email_empty">이메일 란이 비어있어요.</string>
    <string name="onboarding_password_empty">비밀번호 란이 비어있어요.</string>
    <string name="onboarding_firebase_auth_success">Firebase Auth 인증 성공!</string>
    <string name="onboarding_check_email_password">아이디나 비밀번호를 확인해 주세요.</string>
    <string name="onboarding_email_format_wrong">올바른 이메일 형식이 아닙니다.</string>
    <string name="onboarding_personal_info">이용약관 확인하기</string>
    <string name="onboarding_auto_login">다음부터는 자동 로그인할래요!</string>

    <!-- sign-up -->
    <string name="sign_up_title">회원가입</string>
    <string name="email_valid">이메일 주소 형식이 맞네요!</string>
    <string name="email_invalid">잘못된 이메일 형식이에요 ㅠ.ㅠ</string>
    <string name="password_valid">비밀번호 8자 이상 통과 ~</string>
    <string name="password_invalid">비밀번호가 8자 미만이에요;;;</string>
    <string name="username_valid">멋진 별명이네요!</string>
    <string name="username_invalid">2글자 이상의 별명을 입력해 주세요.</string>

    <!-- privacy policy -->
    <string name="privacy_policy_title">개인정보 처리방침</string>
    <string name="privacy_policy_checked">개인정보 처리약관 확인하기</string>
    <string name="privacy_policy_unscrolled">스크롤을 내려 끝까지 읽어주세요</string>
    <string name="privacy_policy_scrolled">약관을 확인했어요</string>

    <!--    settings--><!--    settings--><!--    settings--><!--    settings--><!--    settings--><!--    settings--><!--    settings--><!--    settings-->
    <string name="settings_manage_information">내 정보 관리</string>
    <string name="settings_nickname_sample">coco co35</string>
    <string name="settings_email_sample">test123@google.com</string>
    <string name="settings_password_sample">********</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_exit">HANPLE 탈퇴</string>

    <string name="scroll_test">http://guny.kr/stuff/klorem/에서 아무렇게나 문단을 생성해서 자리를 채웠습니다. 국가안전보장에 관련되는 대외정책·군사정책과 국내정책의 수립에 관하여 국무회의의 심의에 앞서 대통령의 자문에 응하기 위하여 국가안전보장회의를 둔다.
의원을 제명하려면 국회재적의원 3분의 2 이상의 찬성이 있어야 한다. 대통령의 임기가 만료되는 때에는 임기만료 70일 내지 40일전에 후임자를 선거한다.
대법관은 대법원장의 제청으로 국회의 동의를 얻어 대통령이 임명한다. 국가는 건전한 소비행위를 계도하고 생산품의 품질향상을 촉구하기 위한 소비자보호운동을 법률이 정하는 바에 의하여 보장한다.
피고인의 자백이 고문·폭행·협박·구속의 부당한 장기화 또는 기망 기타의 방법에 의하여 자의로 진술된 것이 아니라고 인정될 때 또는 정식재판에 있어서 피고인의 자백이 그에게 불리한 유일한 증거일 때에는 이를 유죄의 증거로 삼거나 이를 이유로 처벌할 수 없다.
국민의 모든 자유와 권리는 국가안전보장·질서유지 또는 공공복리를 위하여 필요한 경우에 한하여 법률로써 제한할 수 있으며, 제한하는 경우에도 자유와 권리의 본질적인 내용을 침해할 수 없다.
전직대통령의 신분과 예우에 관하여는 법률로 정한다. 제1항의 해임건의는 국회재적의원 3분의 1 이상의 발의에 의하여 국회재적의원 과반수의 찬성이 있어야 한다.
연소자의 근로는 특별한 보호를 받는다. 대통령은 국회에 출석하여 발언하거나 서한으로 의견을 표시할 수 있다. 국가는 대외무역을 육성하며, 이를 규제·조정할 수 있다.
근로자는 근로조건의 향상을 위하여 자주적인 단결권·단체교섭권 및 단체행동권을 가진다. 대법원장과 대법관이 아닌 법관의 임기는 10년으로 하며, 법률이 정하는 바에 의하여 연임할 수 있다.
헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 중앙선거관리위원회는 법령의 범위안에서 선거관리·국민투표관리 또는 정당사무에 관한 규칙을 제정할 수 있으며, 법률에 저촉되지 아니하는 범위안에서 내부규율에 관한 규칙을 제정할 수 있다.
대통령은 법률에서 구체적으로 범위를 정하여 위임받은 사항과 법률을 집행하기 위하여 필요한 사항에 관하여 대통령령을 발할 수 있다. 원장은 국회의 동의를 얻어 대통령이 임명하고, 그 임기는 4년으로 하며, 1차에 한하여 중임할 수 있다.
군사재판을 관할하기 위하여 특별법원으로서 군사법원을 둘 수 있다. 국회의 회의는 공개한다. 다만, 출석의원 과반수의 찬성이 있거나 의장이 국가의 안전보장을 위하여 필요하다고 인정할 때에는 공개하지 아니할 수 있다.</string>


    <!--    search--><!--    search--><!--    search--><!--    search--><!--    search--><!--    search--><!--    search--><!--    search-->

    <!--    search_main-->
    <string name="search_where_are_you_going">어디로 가시나요?</string>
    <string name="search_check_score"><![CDATA[점수 확인하기 >]]></string>
    <string name="search_recommend">이런 장소는 어떠세요?</string>

    <!--    search_cost-->
    <string name="search_spend_per_day">하루동안 얼만큼 쓸건가요?</string>
    <string name="search_won">만 원</string>
    <string name="search_cost_ok">정도면 적당할 것 같아요!</string>
    <string name="search_enter_amount">금액을 입력해주세요.</string>

    <!--    search_loading-->
    <string name="search_calculate_score">점수를 계산 중이에요!</string>

    <!--    search_people-->
    <string name="search_travel_tendency">여행 성향을 알려주세요</string>
    <string name="search_congestion_option_1">한적한게 좋아요!</string>
    <string name="search_congestion_option_2">조금은 사람이 있으면 좋겠어요!</string>
    <string name="search_congestion_option_3">적당한게 좋아요!</string>
    <string name="search_congestion_option_4">사람이 많이 오가면 좋겠어요!</string>
    <string name="search_congestion_option_5">핫플이 좋아요!</string>
    <string name="search_enter_congestion">여행 성향을 선택해주세요.</string>

    <!--    search_time-->
    <string name="search_enter_activity_time">활동 시간대를 입력해주세요</string>
    <string name="search_enter_again">다시 입력하기</string>
    <string name="search_time_from">부터</string>
    <string name="search_time_to">까지 주로 활동해요!</string>
    <string name="search_input_complete">입력 완료</string>
    <string name="search_wrong_time_format">잘못 입력된 정보가 있습니다</string>
    <string name="search_enter_time_format">입력되지 않은 정보가 있습니다</string>
    <string name="search_start_time">10:00</string>
    <string name="search_end_time">22:00</string>

    <!--    search_transportation-->
    <string name="search_how_to_go">어떻게 가시나요?</string>
    <string name="search_transportation_public">대중교통을 이용해요!</string>
    <string name="search_transportation_car">차를 가지고 갈거에요!</string>
    <string name="search_enter_transportation">이동 수단을 선택해주세요.</string>


    <!--    score--><!--    score--><!--    score--><!--    score--><!--    score--><!--    score--><!--    score--><!--    score--><!--    score-->

    <!--score_main-->
    <string name="score_address_sample">더 현대 서울</string>
    <string name="score_date_sample">6/2(일) 11:00</string>
    <string name="score_total_sample">77점</string>
    <string name="score_see_detail_score">상세 점수 보러가기</string>
    <string name="score_total_description_sample">놀러 가기 적당해요!</string>
    <string name="score_weather_description_sample_1">비가 올 수 있어요.</string>
    <string name="score_weather_description_sample_2">우산을 준비하세요!</string>

    <string-array name="score_total_description">
        <item>해당 장소를 추천하지 않아요.</item>
        <item>놀러 가기 적당해요~</item>
        <item>매우 추천합니다. 꼭 다녀오세요!</item>
    </string-array>

    <string-array name="score_weather_description">
        <item>비가 올 수 있어요</item>
        <item>우산을 준비하세요</item>
        <item>전반적으로 날씨가 흐려요</item>
        <item>맑은 날씨에요</item>
    </string-array>

    <!--score_detail-->
    <string name="score_detail">상세 점수</string>
    <string name="score_detail_dust">미세 먼지 점수</string>
    <string name="score_detail_weather_good">좋은 날씨에요~</string>
    <string name="score_detail_weather">날씨 점수</string>
    <string name="score_detail_traffic">교통 점수</string>
    <string name="score_detail_congestion">여행 성향 점수</string>
    <string name="score_detail_cost">비용 점수</string>

    <string-array name="score_detail_dust_description">
        <item>미세먼지 농도가 \'좋음\' 수준이에요</item>
        <item>미세먼지 농도가 \'보통\' 수준이에요</item>
        <item>미세먼지 농도가 \'나쁨\' 수준이에요</item>
    </string-array>

    <string-array name="score_detail_weather_description">
        <item>맑은 날씨에요</item>
        <item>전반적으로 날씨가 흐려요</item>
        <item>비가 올 수 있어요</item>
    </string-array>

    <string-array name="score_detail_congestion_description">
        <item>내가 원하던 장소에요</item>
        <item>무난한 장소에요</item>
        <item>원하던 장소가 아니에요</item>
    </string-array>

    <string-array name="score_detail_cost_description">
        <item>마음껏 쓸 수 있어요</item>
        <item>원하는 것들을 할 수 있어요</item>
        <item>할 수 있는게 많지 않아요</item>
    </string-array>

    <string-array name="score_detail_traffic_description">
        <item>막힘없이 이동할 수 있어요</item>
        <item>일정에 맞게 이동할 수 있어요</item>
        <item>이동에 시간이 오래 걸려요</item>
    </string-array>


    <!--    archive--><!--    archive--><!--    archive--><!--    archive--><!--    archive--><!--    archive--><!--    archive--><!--    archive-->

    <!--archive_main-->
    <string name="storage">보관함</string>
    <string name="view_on_map"><![CDATA[지도에서 보기 >]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
