<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:padding="50dp"
        android:src="@drawable/hanple_logo"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/ll_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            style="@style/etGeneral"
            android:hint="@string/email"
            android:textSize="18sp"
            android:text=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/etGeneral"
            android:hint="@string/password"
            android:textSize="18sp"
            android:text=""
            android:inputType="textPassword"
            android:layout_marginTop="12dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_auto_login"
            android:textSize="16dp"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/darkgray"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="25dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_email_login"
            style="@style/btnGeneral1st"
            android:text="@string/onboarding_email_log_in_btn"
            android:textSize="20sp"
            android:layout_marginTop="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_guest_login"
            style="@style/btnGeneral2nd"
            android:text="@string/onboarding_guest_log_in_btn"
            android:textSize="20sp"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp">
        </View>
    </LinearLayout>

    <View
        android:id="@+id/view_right"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:background="#34000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/ll_log_in"
        app:layout_constraintTop_toBottomOf="@id/ll_log_in" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_sign_up"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="16sp"
        android:textColor="@color/darkmint"
        app:layout_constraintBottom_toBottomOf="@id/view_left"
        app:layout_constraintEnd_toStartOf="@id/view_left"
        app:layout_constraintStart_toEndOf="@id/view_right"
        app:layout_constraintTop_toTopOf="@id/view_left" />

    <View
        android:id="@+id/view_left"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:background="#34000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ll_log_in"
        app:layout_constraintTop_toBottomOf="@id/ll_log_in" />

</androidx.constraintlayout.widget.ConstraintLayout>