<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchPeopleFragment"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchPeopleFragment">

    <TextView
        android:id="@+id/tv_search_people_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/search_travel_tendency"
        android:textColor="@color/black"
        android:fontFamily="@font/line_seed_bold"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search_people_button1"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/ic_check_blank_20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_search_people_title"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search_people_button2"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:layout_constraintTop_toBottomOf="@id/btn_search_people_button1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_check_blank_20dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search_people_button3"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:background="@drawable/ic_check_blank_20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_search_people_button2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="35dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search_people_button4"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_people_button3"
        android:layout_marginStart="48dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_check_blank_20dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search_people_button5"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_people_button4"
        android:layout_marginStart="48dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_check_blank_20dp" />

    <TextView
        android:id="@+id/tv_search_people_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_congestion_option_1"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_search_people_button1"
        app:layout_constraintTop_toTopOf="@id/btn_search_people_button1"
        app:layout_constraintBottom_toBottomOf="@id/btn_search_people_button1"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tv_search_people_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_congestion_option_2"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_search_people_button2"
        app:layout_constraintTop_toTopOf="@id/btn_search_people_button2"
        app:layout_constraintBottom_toBottomOf="@id/btn_search_people_button2"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tv_search_people_description3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_congestion_option_3"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_search_people_button3"
        app:layout_constraintTop_toTopOf="@id/btn_search_people_button3"
        app:layout_constraintBottom_toBottomOf="@id/btn_search_people_button3"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tv_search_people_description4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_congestion_option_4"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_search_people_button4"
        app:layout_constraintTop_toTopOf="@id/btn_search_people_button4"
        app:layout_constraintBottom_toBottomOf="@id/btn_search_people_button4"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tv_search_people_description5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_congestion_option_5"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_search_people_button5"
        app:layout_constraintTop_toTopOf="@id/btn_search_people_button5"
        app:layout_constraintBottom_toBottomOf="@id/btn_search_people_button5"
        android:layout_marginStart="10dp" />


    <!-- 하단 버튼 -->
    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="36dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_search_people_next"
            style="@style/btnGeneral1st"
            android:text="@string/next"
            android:textSize="20sp"
            android:layout_marginTop="24dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_search_people_skip"
            style="@style/btnGeneral3rd"
            android:text="@string/skip"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>