<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_detail_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/score_detail"
        android:fontFamily="@font/line_seed_bold"
        android:textSize="36sp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_dust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:text="@string/score_detail_dust"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_detail_dialog_dust"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_dialog_title" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_dust_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_dialog_score_dust"
        app:layout_constraintStart_toStartOf="@id/tv_detail_dialog_score_dust"
        android:layout_marginTop="5dp"
        android:text="@string/score_detail_weather_good"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detail_dialog_dust"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_dialog_title"
        android:layout_marginTop="55dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/ds_ic_dust_sample" />


    <TextView
        android:id="@+id/tv_detail_dialog_score_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/score_detail_weather"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_detail_dialog_dust"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_dialog_score_dust" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_dialog_score_weather"
        app:layout_constraintStart_toStartOf="@id/tv_detail_dialog_score_weather"
        android:layout_marginTop="5dp"
        android:text="@string/score_detail_weather_good"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detail_dialog_weather"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_dialog_dust"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/ds_ic_weather_sample" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_traffic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/score_detail_traffic"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_detail_dialog_traffic"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_dialog_score_weather" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_traffic_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_dialog_score_traffic"
        app:layout_constraintStart_toStartOf="@id/tv_detail_dialog_score_traffic"
        android:layout_marginTop="5dp"
        android:text="@string/score_detail_weather_good"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detail_dialog_traffic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_dialog_weather"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/ds_ic_traffic_sample" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_congestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/score_detail_congestion"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_detail_dialog_congestion"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_dialog_score_traffic" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_congestion_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_dialog_score_congestion"
        app:layout_constraintStart_toStartOf="@id/tv_detail_dialog_score_congestion"
        android:layout_marginTop="5dp"
        android:text="@string/score_detail_weather_good"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detail_dialog_congestion"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_dialog_traffic"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/ds_ic_map_sample" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/score_detail_cost"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_detail_dialog_congestion"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_dialog_score_congestion" />

    <TextView
        android:id="@+id/tv_detail_dialog_score_cost_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_dialog_score_cost"
        app:layout_constraintStart_toStartOf="@id/tv_detail_dialog_score_cost"
        android:layout_marginTop="5dp"
        android:text="@string/score_detail_weather_good"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detail_dialog_cost"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_dialog_congestion"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/ds_ic_money_sample" />

    <TextView
        android:id="@+id/tv_detail_dialog_dismiss"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/close"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="27sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>